Made some Generic classes for reusability

--- a/RestSharpDemo/RestSharpDemo.csproj
+++ b/RestSharpDemo/RestSharpDemo.csproj
@@ -13,6 +13,9 @@
     <PackageReference Include="coverlet.collector" Version="3.0.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="RestSharp" Version="106.11.7" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
   </ItemGroup>
-
+	<Target Name="CopyCustomContent" AfterTargets="AfterBuild">
+		<Copy SourceFiles="app.config" DestinationFiles="$(OutDir)\testhost.dll.config" />
+	</Target>
 </Project>
